--- a/.config
+++ b/.config
@@ -2,7 +2,7 @@
 ^ 'main settings'
   state isAntiCheatActive = 'FALSE'
   state logActions = 'PROMPT'
-  state portNum = int'ps2025'
+  state portNum = '2025'
   state useOffsetsVIAbinfile = 'TRUE'
   state localPvP = 'TRUE'
   state useNewUI = 'PROMPT'
