--- a/.config
+++ b/.config
@@ -14,6 +14,10 @@
 >
 
 --| 'More configs'
-  ^ 'Will be added soon.'
-
+  ^ 'extra settings'
+    state crystalDepositCD = 'One Week'
+    state allowCustomAssets = 'TRUE'
+    state japaneseBuildOut = 'TRUE ON COMPILE'
+    state databaseModule = 'SQLite'
+    state AddNewGroundBattle = 'FALSE' -- 'Might not be stable on the private server'
 >
